--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -10,9 +10,30 @@
 
   <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
-  <!-- TODO #1 - Use a loop to display job results in a table. -->
+<!--  display jobs in a table format-->
 
-</div>
+  <table class="job-listing">
+    <tr>
+<!--      Table headers-->
+      <th>ID</th>
+      <th>Employer</th>
+      <th>Location</th>
+      <th>Position</th>
+      <th>Skill</th>
+    </tr>
+<!--    Iterate through each job and display its details-->
+    <tr th:fragment="job-row" th:each="job : ${jobs}">
+      <td th:text="${job.id}"></td>
+      <td th:text="${job.employer}"></td>
+      <td th:text="${job.location}"></td>
+      <td th:text="${job.positionType}"></td>
+      <td th:text="${job.coreCompetency}"></td>
+    </tr>
+  </table>
+ </div>
+
+
+
 
 </body>
 </html>
